fix: Prevent wrapping of report cards

--- a/frontend-svelte/src/app.css
+++ b/frontend-svelte/src/app.css
@@ -96,13 +96,6 @@ audio {
   max-width: 100%;
 }
 
-input,
-select,
-textarea,
-button {
-  font: inherit;
-}
-
 button,
 [role='button'] {
   cursor: pointer;
